menu (2.1.26) unstable; urgency=low

  * The "unreleased" release 
  * Fix update-menus counting of menuentries in verbose mode. 
    Closes: #315304. Thanks Shlomi Fish.
  * Add Bulgarian menu sections translation. Thanks Yavor Doganov.
    Closes: #315841. 
  * Bump Standards-Version to 3.6.2.

 -- Bill Allombert <ballombe@debian.org>  Mon, 13 Jun 2005 13:21:44 +0200

menu (2.1.25) unstable; urgency=low

  * The "Welcome to Etch" release 
  * Documentation changes-only upload to transition from /usr/lib/menu
    to /usr/share/menu. Sarge menu support both locations already,
    /usr/lib/menu havinghigher priority than /usr/share/menu.
    Closes: #92428. Thanks Jochen Voss.
  * debian/rules: Move README from /usr/lib/menu to /usr/share/menu.
  * debian/control: Rewrite package description.
  * Clean up manpages.
  * Update Portuguese menu sections translation. 
    Thanks Miguel Figueiredo. Closes: #311308.
  * Remove gpm default menu entry. Closes: #187728.
  * Changes by Christian Perrier:
    - Correct extra space before exclamation mark before a program message
    - Update german menu messages and sections translations. 
      Thanks Jens Seidel. Closes: #312852

 -- Bill Allombert <ballombe@debian.org>  Sun, 12 Jun 2005 18:57:18 +0200

menu (2.1.24) unstable; urgency=medium

  * The "head or tail" release 
  * Fix .menus typo in menufile.5. Closes: #306564. Thanks Sean Finney.
  * Add Vietnamese menu messages and menu sections translations.
    Thanks Clytie Siddall. Closes: #307450, #308953.
  * Update Esperanto menu sections translation. Thanks MJ Ray.
  * Add Esperanto menu messages translation. Thanks MJ Ray.
  * Unfuzzy Norwegian Bokmål menu messages translation.
  
 -- Bill Allombert <ballombe@debian.org>  Tue, 24 May 2005 10:34:47 +0200

menu (2.1.23) unstable; urgency=low

  * The "getting over Vancouver" release
  * Add Norwegian Bokmål menu messages and sections translation. Thanks
    Hans Fredrik Nordhaug. Closes: #298079.