@@ -2,7 +2,7 @@
 
 set -e
 
-chmod a-x /usr/bin/update-menus.real
+chmod a-x /usr/bin/update-menus
 
 install-info --quiet --remove /usr/share/info/menu.info
 
